--- a/FoodTrackerV2/Base.lproj/Main.storyboard
+++ b/FoodTrackerV2/Base.lproj/Main.storyboard
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="2BG-fr-YsZ">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="FoodTrackerV2" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,11 +16,103 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="e6e-H7-fWm">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" id="iEo-J4-esi">
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="iEo-J4-esi" id="Fbt-ou-VFI">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="jEE-1h-j1a"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="kVw-5J-Hxh"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="e6e-H7-fWm" secondAttribute="bottom" id="9CS-Oi-z52"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="e6e-H7-fWm" secondAttribute="trailing" constant="-16" id="cdm-Bs-8AV"/>
+                            <constraint firstItem="e6e-H7-fWm" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="-20" id="qDH-97-vDM"/>
+                            <constraint firstItem="e6e-H7-fWm" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-16" id="zlc-dM-ZS7"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="eML-b0-QnZ"/>
+                    <connections>
+                        <outlet property="tableView" destination="e6e-H7-fWm" id="qqu-Et-kIj"/>
+                        <segue destination="fFD-5O-eYr" kind="show" identifier="toDetailVCSegue" id="Y1z-Vg-Euz"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1076" y="1018"/>
+        </scene>
+        <!--Detail View Controller-->
+        <scene sceneID="wOz-34-Bde">
+            <objects>
+                <viewController id="fFD-5O-eYr" customClass="DetailViewController" customModule="FoodTrackerV2" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="aMN-QA-U4l"/>
+                        <viewControllerLayoutGuide type="bottom" id="gVB-BI-rlD"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="VYu-c9-VmL">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="F3b-Nl-ds4">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="F3b-Nl-ds4" firstAttribute="top" secondItem="aMN-QA-U4l" secondAttribute="bottom" constant="-64" id="Dm4-ZR-5N7"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="F3b-Nl-ds4" secondAttribute="trailing" constant="-16" id="jJJ-to-StQ"/>
+                            <constraint firstItem="F3b-Nl-ds4" firstAttribute="leading" secondItem="VYu-c9-VmL" secondAttribute="leadingMargin" constant="-16" id="n6U-Ds-QhD"/>
+                            <constraint firstItem="gVB-BI-rlD" firstAttribute="top" secondItem="F3b-Nl-ds4" secondAttribute="bottom" id="r8q-Rk-UOE"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="hst-hu-ceS">
+                        <barButtonItem key="rightBarButtonItem" title="Eat It" id="25F-MR-8Rc">
+                            <connections>
+                                <action selector="eatItBarButtonItemPressed:" destination="fFD-5O-eYr" id="e49-T8-U1D"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="textView" destination="F3b-Nl-ds4" id="u7y-Ef-bdW"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="c8B-ET-x7C" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1738" y="1018"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="qlI-sm-Urv">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="2BG-fr-YsZ" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="mPS-iV-0dN">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="o6G-tI-Jk2"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ThU-1a-hDo" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="320" y="1018"/>
         </scene>
     </scenes>
 </document>
