--- a/FoodTrackerV2/Base.lproj/Main.storyboard
+++ b/FoodTrackerV2/Base.lproj/Main.storyboard
@@ -8,7 +8,7 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="FoodTrackerV2" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController automaticallyAdjustsScrollViewInsets="NO" id="BYZ-38-t0r" customClass="ViewController" customModule="FoodTrackerV2" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -17,8 +17,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="e6e-H7-fWm">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="e6e-H7-fWm">
+                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" id="iEo-J4-esi">
@@ -37,10 +37,10 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="e6e-H7-fWm" secondAttribute="bottom" id="9CS-Oi-z52"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="e6e-H7-fWm" secondAttribute="trailing" constant="-16" id="cdm-Bs-8AV"/>
-                            <constraint firstItem="e6e-H7-fWm" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="-20" id="qDH-97-vDM"/>
-                            <constraint firstItem="e6e-H7-fWm" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-16" id="zlc-dM-ZS7"/>
+                            <constraint firstItem="e6e-H7-fWm" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-16" id="24z-hW-2gk"/>
+                            <constraint firstItem="e6e-H7-fWm" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="Map-Cf-EsL"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="e6e-H7-fWm" secondAttribute="trailing" constant="-16" id="O7N-bG-jEV"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="e6e-H7-fWm" secondAttribute="bottom" id="iuU-E1-i2e"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="eML-b0-QnZ"/>
